fix overflow hidden

--- a/src/app/views/styles/card.scss
+++ b/src/app/views/styles/card.scss
@@ -593,6 +593,9 @@
   &.cloud-apps {
     background-color: transparent;
   }
+  &.only-button {
+    overflow: hidden;
+  }
 
   &.remaining-searches {
     background: #a7a7a7;
